--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "durli",
   "version": "0.1.0",
-  "homepage": "https://rbellizari.github.io/Durli-Eco/",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
